# v1-periphery

./: .gitignore  Cargo.toml  README.md
artifacts/: address_provider.wasm  checksums.txt  council.wasm  cw20_token.wasm  incentives.wasm  insurance_fund.wasm  lockdrop.wasm  ma_token.wasm  mars_airdrop.wasm  mars_lp_staking.wasm  red_bank.wasm  staking.wasm  treasury.wasm  xmars_token.wasm
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop/examples/: schema.rs
contracts/airdrop/schema/: callback_msg.json  config.json  config_response.json  execute_msg.json  instantiate_msg.json  lock_up_info_response.json  query_msg.json  state.json  update_config_msg.json  user_info.json  user_info_response.json
contracts/airdrop/src/: contract.rs  crypto.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/airdrop/tests/: integration.rs
contracts/auction/: Cargo.toml  README.md
contracts/auction/examples/: schema.rs
contracts/auction/schema/: callback_msg.json  config.json  config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  state.json  state_response.json  update_config_msg.json  user_info.json  user_info_response.json
contracts/auction/src/: contract.rs  state.rs
contracts/auction/tests/: integration.rs
contracts/lockdrop/: Cargo.toml  README.md
contracts/lockdrop/examples/: schema.rs
contracts/lockdrop/schema/: callback_msg.json  config.json  config_response.json  execute_msg.json  instantiate_msg.json  lock_up_info_response.json  lockup_info.json  lockup_info_response.json  query_msg.json  state.json  update_config_msg.json  user_info.json  user_info_response.json
contracts/lockdrop/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/lockdrop/tests/: integration.rs
contracts/lp-staking/: Cargo.toml  README.md
contracts/lp-staking/src/: contract.rs  msg.rs  state.rs
contracts/lp_bootstrap_auction/: Cargo.toml
contracts/lp_bootstrap_auction/src/: contract.rs  state.rs
contracts/lp_staking/: Cargo.toml  README.md
contracts/lp_staking/examples/: schema.rs
contracts/lp_staking/schema/: config.json  config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json  staker_info.json  staker_info_response.json  state.json  state_response.json
contracts/lp_staking/src/: contract.rs  lib.rs  mock_querier.rs  state.rs  testing.rs
contracts/lp_staking/tests/: integration.rs
contracts/mockAddressProvider/: Cargo.toml
contracts/mockAddressProvider/schema/: config_params.json
contracts/mockAddressProvider/src/: contract.rs  error.rs
contracts/mockIncentives/: Cargo.toml
contracts/mockIncentives/src/: contract.rs  state.rs
contracts/mockRedBank/: Cargo.toml
contracts/mockRedBank/schema/: mars_contract.json
contracts/mockRedBank/src/: contract.rs  error.rs  state.rs
contracts/mockStaking/: Cargo.toml
contracts/mockStaking/src/: error.rs  state.rs
contracts/mock_maToken/: Cargo.toml
contracts/mock_maToken/schema/: execute_msg.json
contracts/mock_maToken/src/: allowances.rs  lib.rs  state.rs
contracts/mock_xmars/: Cargo.toml
contracts/mock_xmars/src/: allowances.rs  core.rs  snapshots.rs
contracts/mocks/mock_address_provider/: Cargo.toml
contracts/mocks/mock_astroport/pair/: Cargo.toml
contracts/mocks/mock_astroport/pair/tests/: integration.rs
contracts/mocks/mock_astroport/token/: Cargo.toml
contracts/mocks/mock_astroport/vesting/: Cargo.toml
contracts/mocks/mock_astroport/vesting/src/: contract.rs
contracts/mocks/mock_incentives/: Cargo.toml
contracts/mocks/mock_incentives/src/: contract.rs
contracts/mocks/mock_ma_token/: Cargo.toml
contracts/mocks/mock_ma_token/src/: contract.rs
contracts/mocks/mock_red_bank/: Cargo.toml
contracts/mocks/mock_red_bank/src/: lib.rs
contracts/mocks/mock_redbank/mars-address-provider/: Cargo.toml
contracts/mocks/mock_redbank/mars-incentives/: Cargo.toml
contracts/mocks/mock_redbank/mars-ma-token/: Cargo.toml
contracts/mocks/mock_redbank/mars-red-bank/: Cargo.toml
contracts/mocks/mock_redbank/mars-red-bank/src/: contract.rs
contracts/mocks/mock_redbank/mars-staking/: Cargo.toml
contracts/mocks/mock_redbank/mars-xmars-token/: Cargo.toml
contracts/mocks/mock_staking/: Cargo.toml
contracts/mocks/mock_staking/examples/: schema.rs
contracts/mocks/mock_staking/src/: contract.rs
contracts/mocks/mock_xmars_token/: Cargo.toml
contracts/mocks/mock_xmars_token/src/: contract.rs  lib.rs
contracts/staking/: Cargo.toml  README.md
contracts/staking/examples/: schema.rs
contracts/staking/schema/: config_response.json  execute_msg.json  instantiate_msg.json  staker_info_response.json  state_response.json
contracts/staking/src/: contract.rs  msg.rs
scripts/: Readme.md  airdrop.spec.ts  build_artifacts.sh  configs.ts  create_airdrop_json.ts  deploy_airdrop.ts  deploy_configs.ts  deploy_testnet.ts  deploy_testnet_airdrop.ts  deploy_testnet_lockdrop.ts  deploy_testnet_lp_staking.ts  helpers.ts  list_of_users_eligible_for_airdrop.json  lockdrop.spec.ts  lpHelpers.ts  lpStakingDeploy.ts  package-lock.json  package.json  staking.spec.ts  test_airdrop.spec.ts  test_lockdrop.spec.ts  test_lp_staking.spec.ts  testnet_deploy_lp_staking.ts  testnet_deploy_periphery_contracts.ts
scripts/helpers/: airdrop_helpers.ts  evm_hashmsg.ts  evm_merkle_tree.js  helpers.ts  lockdrop_helpers.ts  lpStaking_helpers.ts  merkle_tree_utils.js  merkle_tree_utils.ts  mock_helpers.ts  staking_helpers.ts  terra_merkle_tree.js
scripts/helpers/airdrop_helpers/: airdrop_helpers.ts  airdrop_recepients.json  merkle_tree.ts  merkle_tree_utils.ts
