[workspace]
members = [
  "contracts/airdrop", 
  "contracts/lockdrop", 
  "contracts/lp_staking", 
  "contracts/mocks/*",
  "packages/*"
]

[profile.release.package.mars]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release.package.mars-periphery]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
