[package]
name = "mars-airdrop"
version = "0.1.0"
authors = ["Alien hunter no. 42 <84127070+alienHunterOnMars@users.noreply.github.com>"]
edition = "2018"
description = "Contract to facilitate MARS Token airdrop"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }
cw20-base = { version = "0.8", features = ["library"] }

schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
hex = "0.4.3"
sha3 = "0.9.1"
ethereum-types = "0.7.0"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }
k256 = { version = "0.8.0", default-features = false, features = ["ecdsa"] }
# rand_core = {version = "0.6.3", default-features = false}
getrandom = { version = "0.2.3", default-features = false, features = ["js"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }