[package]
name = "mars-airdrop"
version = "1.0.0"
authors = ["alien Hunter <alienHunterOnMars@protonmail.com>"]
edition = "2018"
description = "Contract to facilitate MARS Token airdrop"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
mars-periphery = { path = "../../packages/mars-periphery" }

cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.9" }

cw20-base = { version = "0.9", features = ["library"] }
cw20 = { version = "0.9" }
cw2 = { version = "0.9" } 
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"

hex = "0.4.3"
sha3 = "0.9.1"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git"}
# needed for tests
mars-auction =  { path = "../auction" }
astroport-pair = {git = "https://github.com/astroport-fi/astroport-core.git", package = "astroport-pair", tag = "v1.0.0"}
astroport = {git = "https://github.com/astroport-fi/astroport-core.git", package="astroport", tag = "v1.0.0"}
