[package]
name = "mars-auction"
version = "1.0.0"
authors = ["astromartian"]
edition = "2018"
description = "Contract to facilitate MARS-UST LP Pool bootstrapping via auction"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
astroport = {git = "https://github.com/astroport-fi/astroport-core.git", package="astroport", tag = "v1.0.0"}
mars-periphery = { path = "../../packages/mars-periphery" }

cw20 = { version = "0.9" }
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.9.0" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
cw20-base = { version = "0.9", features = ["library"] }
schemars = "0.8.3"
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git", branch="main"}

# needed for intergration testing
generator-proxy-to-mars = { git = "https://github.com/astroport-fi/astro-generator-proxy-contracts.git", branch = "main", package = "generator-proxy-to-mars"}
astroport-generator-proxy = { git = "https://github.com/astroport-fi/astro-generator-proxy-contracts.git", branch = "main", package = "astroport-generator-proxy"}
astroport-generator = {git = "https://github.com/astroport-fi/astroport.git", branch = "master", package = "astroport-generator"}

astroport-vesting = { git = "https://github.com/astroport-fi/astroport.git", tag = "v1.0.0", package = "astroport-vesting"}
astroport-factory =  {git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.0.0", package = "astroport-factory"}
astroport-pair =  {git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.0.0", package = "astroport-pair"}
astroport-token =  {git = "https://github.com/astroport-fi/astroport-core.git", tag = "v1.0.0", package = "astroport-token"}

mars-core = { git = "https://github.com/mars-protocol/mars-core", package = "mars-core"}
mars-address-provider = { git = "https://github.com/mars-protocol/mars-core", package = "mars-address-provider"}

mars-airdrop =  { path = "../airdrop" }
mars-lockdrop =  { path = "../lockdrop" }
mars-lp-staking =    { path = "../lp_staking" }
