[package]
name = "mars-lockdrop"
version = "1.0.0"
authors = ["alien Hunter <alienHunterOnMars@protonmail.com>"]
edition = "2018"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
mars-core = { path = "../../packages/mars-core", version = "1.0.0" }
mars-periphery = { path = "../../packages/mars_periphery" }

cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = "0.8"

cw20 = { version = "0.9" }
cw20-base = { version = "0.9", features = ["library"] }

schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
mars-auction =  { path = "../auction" }
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git"}
# For testcases
mars-address-provider =  { path = "../mocks/mock_redbank/mars-address-provider" }
mars-staking =  { path = "../mocks/mock_redbank/mars-staking" }
mars-incentives =  { path = "../mocks/mock_redbank/mars-incentives" }
mars-xmars-token =  { path = "../mocks/mock_redbank/mars-xmars-token" }

