[package]
name = "mars-lockdrop"
version = "1.0.0"
authors = ["astromartian"]
edition = "2018"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
mars-periphery = { path = "../../packages/mars-periphery" }
mars-core = { git = "https://github.com/mars-protocol/mars-core", package = "mars-core"}

cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = "0.9"

cw20 = { version = "0.9" }
cw20-base = { version = "0.9", features = ["library"] }

schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
mars-auction =  { path = "../auction" }
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git", branch="main"}

# For testcases
mars-address-provider = { git = "https://github.com/mars-protocol/mars-core", package = "mars-address-provider"}
mars-staking = { git = "https://github.com/mars-protocol/mars-core", package = "mars-staking"}
mars-red-bank = { git = "https://github.com/mars-protocol/mars-core", package = "mars-red-bank"}
mars-ma-token = { git = "https://github.com/mars-protocol/mars-core", package = "mars-ma-token"}
mars-incentives = { git = "https://github.com/mars-protocol/mars-core", package = "mars-incentives"}
mars-xmars-token = { git = "https://github.com/mars-protocol/mars-core", package = "mars-xmars-token"}
