[package]
name = "terra-mars-lp-staking"
version = "1.0.0"
authors = ["alien Hunter <alienHunterOnMars@protonmail.com>"]
edition = "2018"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars = { path = "../../packages/mars", version = "1.0.0" }
mars-periphery = { path = "../../packages/mars_periphery" }

cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw20 = { version = "0.8.0" } 
cw-storage-plus = "0.8"

cosmwasm-bignumber = "2.2.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }