[package]
name = "mars-lp-staking"
version = "1.0.0"
authors = ["astromartian"]
edition = "2018"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars-periphery = { path = "../../packages/mars-periphery" }

cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw2 = { version = "0.9" } 
cw20 = { version = "0.9.0" } 
cw-storage-plus = "0.9"

cosmwasm-bignumber = "2.2.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cw-multi-test = "0.8.0"
cosmwasm-schema = "0.16.0"
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw20-base = { version = "0.9", features = ["library"] }
