[package]
name = "mock-red-bank"
version = "1.0.0"
authors = ["Spike Spiegel <spikeonmars@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
mars = { path = "../../../packages/mars", version = "1.0.0" }

cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8" }
cw20 = "0.8" 
cw20-base = { version = "0.8", features = ["library"] }

terra-cosmwasm = "2.2.0"
terraswap = "2.3.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = "0.6.3"
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
